# tauri-htmx

./: .gitignore  README.md  index.html  interceptor.js  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/app/: mod.rs  setup.rs
src-tauri/src/proxy/: client.rs  command.rs  mappers.rs  mod.rs  schema.rs  utils.rs
