[package]
name = "tauri-htmx"
version = "0.1.0"
description = "Tauri application to demonstrate Htmx usage."
authors = [""]
license = ""
repository = ""
edition = "2021"

[workspace]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.5", features = ["linux-ipc-protocol"] }

reqwest = { version = "0.12.5", features = ["multipart", "native-tls-vendored", "cookies"] }
reqwest_cookie_store = "0.8.0"

thiserror = "1.0.63"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-stackdriver = { version = "0.10.0", features = ["opentelemetry"] }
tracing-opentelemetry = "0.23.0"
tokio = { version = "1.38.0" }

tauri-plugin-os = "2.0.0-rc.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol", "tauri/linux-ipc-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
